fixed z-index bug with Toasts showing below fixed header

--- a/client/src/components/Toasts/Toasts.scss
+++ b/client/src/components/Toasts/Toasts.scss
@@ -7,4 +7,5 @@
   right: 0;
   top: 40px;
   width: 100%;
+  z-index: 3;
 }
